// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExtraOptionsMenu as buyer ApplyLC is disabled 1`] = `
<div
  className="menu transition"
>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="details"
    name="details"
    onClick={[Function]}
    role="option"
  >
    View Trade Details
  </div>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="viewLc"
    name="viewLc"
    onClick={[Function]}
    role="option"
  >
    View LC Details
  </div>
</div>
`;

exports[`ExtraOptionsMenu as buyer ApplyLC shows 1`] = `
<div
  className="menu transition"
>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="details"
    name="details"
    onClick={[Function]}
    role="option"
  >
    View Trade Details
  </div>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="applyforLc"
    name="applyforLc"
    onClick={[Function]}
    role="option"
  >
    Apply for LC
  </div>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="applyfornewSBLC"
    name="applyfornewSBLC"
    onClick={[Function]}
    role="option"
  >
    Apply for SBLC
  </div>
</div>
`;

exports[`ExtraOptionsMenu as buyer Reapply for LC is disabled 1`] = `
<div
  className="menu transition"
>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="details"
    name="details"
    onClick={[Function]}
    role="option"
  >
    View Trade Details
  </div>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="applyforLc"
    name="applyforLc"
    onClick={[Function]}
    role="option"
  >
    Apply for LC
  </div>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="applyfornewSBLC"
    name="applyfornewSBLC"
    onClick={[Function]}
    role="option"
  >
    Apply for SBLC
  </div>
</div>
`;

exports[`ExtraOptionsMenu as buyer Reapply for LC shows if status is issued lc rejected 1`] = `
<div
  className="menu transition"
>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="details"
    name="details"
    onClick={[Function]}
    role="option"
  >
    View Trade Details
  </div>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="reapplyforLc"
    name="reapplyforLc"
    onClick={[Function]}
    role="option"
  >
    Reapply for LC
  </div>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="applyfornewSBLC"
    name="applyfornewSBLC"
    onClick={[Function]}
    role="option"
  >
    Apply for SBLC
  </div>
</div>
`;

exports[`ExtraOptionsMenu as buyer Reapply for LC shows if status is request rejected 1`] = `
<div
  className="menu transition"
>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="details"
    name="details"
    onClick={[Function]}
    role="option"
  >
    View Trade Details
  </div>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="reapplyforLc"
    name="reapplyforLc"
    onClick={[Function]}
    role="option"
  >
    Reapply for LC
  </div>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="applyfornewSBLC"
    name="applyfornewSBLC"
    onClick={[Function]}
    role="option"
  >
    Apply for SBLC
  </div>
</div>
`;

exports[`ExtraOptionsMenu as buyer View LC Details is disabled 1`] = `
<div
  className="menu transition"
>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="details"
    name="details"
    onClick={[Function]}
    role="option"
  >
    View Trade Details
  </div>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="applyforLc"
    name="applyforLc"
    onClick={[Function]}
    role="option"
  >
    Apply for LC
  </div>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="applyfornewSBLC"
    name="applyfornewSBLC"
    onClick={[Function]}
    role="option"
  >
    Apply for SBLC
  </div>
</div>
`;

exports[`ExtraOptionsMenu as buyer View LC Details shows 1`] = `
<div
  className="menu transition"
>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="details"
    name="details"
    onClick={[Function]}
    role="option"
  >
    View Trade Details
  </div>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="viewLc"
    name="viewLc"
    onClick={[Function]}
    role="option"
  >
    View LC Details
  </div>
</div>
`;

exports[`ExtraOptionsMenu as buyer or seller shows view Trade 1`] = `
<div
  className="menu transition"
>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="details"
    name="details"
    onClick={[Function]}
    role="option"
  >
    View Trade Details
  </div>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="applyforLc"
    name="applyforLc"
    onClick={[Function]}
    role="option"
  >
    Apply for LC
  </div>
  <div
    aria-disabled={false}
    className="item"
    data-test-id="applyfornewSBLC"
    name="applyfornewSBLC"
    onClick={[Function]}
    role="option"
  >
    Apply for SBLC
  </div>
</div>
`;
